[package]
name = "realtime-rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
chrono = "0.4.23"
glm = "0.2.3"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
wgpu = "0.16.1"
winit = "0.28.6"
